--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,8 +37,8 @@
 	position: absolute;
 	top: 52%;
 	font-weight: bold;
-	left: 42.5%;
-	font-size: xx-large;
+	left: 44.5%;
+	font-size: 45px;
 }
 
 .top-title {
