--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,17 +6,25 @@
 	height:100%;
 }
 
-.on-icon {
+.on-icon, .off-icon {
 	width:50px;
 	height:50px;
 	position:relative;
 	left:45%;
-	background-color: #74d600;
 	border-radius: 100%;
 	margin-top: 7%;
 }
 
-.on-icon-text {
+.on-icon {
+	background-color: #74d600;
+}
+
+.off-icon {
+	background-color: #FF1919;
+}
+
+
+.status-icon-text {
 	text-align:center;
 	padding-top:26%;
 	font-weight: bold;
@@ -25,7 +33,7 @@
 
 .chart-container { 
 	position:relative;
-	left:13.75%;
+	left:14%;
 }
 
 .state-container {
